k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mibanco-app-service
  labels:
    app: mibanco-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: mibanco-app
